- change icon - add MotionLayout

--- a/app/src/main/res/layout-land/fragment_main.xml
+++ b/app/src/main/res/layout-land/fragment_main.xml
@@ -22,10 +22,10 @@
         android:id="@+id/btn_refresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/orange"
-        android:src="@drawable/ic_refresh"
+        android:backgroundTint="@color/black"
         android:layout_marginStart="16dp"
         android:text="@string/get_cat"
+        android:textColor="@color/white"
         app:borderWidth="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_cat"
         app:layout_constraintStart_toEndOf="@+id/iv_cat"
