--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_cat_arrow"
+        android:src="@drawable/ic_cat"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,10 +19,10 @@
         android:id="@+id/btn_refresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/orange"
-        android:src="@drawable/ic_refresh"
+        android:backgroundTint="@color/black"
         android:layout_marginTop="16dp"
         android:text="@string/get_cat"
+        android:textColor="@color/white"
         app:borderWidth="0dp"
         app:layout_constraintEnd_toEndOf="@+id/iv_cat"
         app:layout_constraintStart_toStartOf="@+id/iv_cat"
