- add checking internet connection

--- a/app/src/main/res/values/memes.xml
+++ b/app/src/main/res/values/memes.xml
@@ -3,8 +3,10 @@
     <string-array name="memes">
         <item>Это я завтра:</item>
         <item>Это я, когда пришёл на лекцию:</item>
-        <item>Это я, когда захотел в туалет:</item>
+        <item>Это я, когда сытно поел:</item>
         <item>Это я, когда увидел себя в списке на отчисление:</item>
-        <item>Это я в столовой Бонча:</item>
+        <item>Это я в столовой своего вуза:</item>
+        <item>Это я, когда не пошёл на первую пару, а её отменили:</item>
+        <item>Это я, когда лёг спать днём и проспал 7 часов:</item>
     </string-array>
 </resources>
