- add HMS adds - add toolbar - add short info

--- a/app/src/main/res/values/memes.xml
+++ b/app/src/main/res/values/memes.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="memes">
-        <item>Это я завтра:</item>
         <item>Это я, когда пришёл на лекцию:</item>
         <item>Это я, когда сытно поел:</item>
         <item>Это я, когда увидел себя в списке на отчисление:</item>
         <item>Это я в столовой своего вуза:</item>
         <item>Это я, когда не пошёл на первую пару, а её отменили:</item>
         <item>Это я, когда лёг спать днём и проспал 7 часов:</item>
+        <item>Это я, когда вспомнил что-то важное, а потом забыл:</item>
+        <item>Это я проснулся, когда зазвонил будильник:</item>
+        <item>Это я, когда просыпаюсь на работу:</item>
+        <item>Это я каждое утро:</item>
+        <item>Это я, когда увидел нечто жуткое:</item>
+        <item>Это я, когда фотографируюсь на паспорт:</item>
+        <item>Это я, когда пытаюсь выбраться за пределы зоны комфорта:</item>
+        <item>Это я, когда решил готовиться к экзамену и узнал количество билетов:</item>
+        <item>Это я, когда препод не хочет исправлять мне оценки за семecтp:</item>
+        <item>Это я на первом курсе:</item>
     </string-array>
 </resources>
