--- a/app/src/main/res/navigation/nav_graph_application.xml
+++ b/app/src/main/res/navigation/nav_graph_application.xml
@@ -15,5 +15,13 @@
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.example.apiexampleapp.screens.main.MainFragment"
-        android:label="MainFragment" />
+        android:label="MainFragment" >
+        <action
+            android:id="@+id/action_mainFragment_to_dialogFragment"
+            app:destination="@id/dialogFragment" />
+    </fragment>
+    <dialog
+        android:id="@+id/dialogFragment"
+        android:name="com.example.apiexampleapp.screens.dialog.DialogFragment"
+        android:label="DialogFragment" />
 </navigation>
