--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="orange">#FF5722</color>
+
+    <color name="brown_dark">#4b2c20</color>
+    <color name="brown">#795548</color>
 </resources>
